force-app/main/default/objects/Kaiser_Member_Info__c/Kaiser_Member_Info__c.object-meta.xml
<CustomObject>
    <label>Kaiser Member Info</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Kaiser Member Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kaiser Member Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>