force-app/main/default/objects/Kaiser_Member_Info__c/fields/Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Role__c</fullName>
    <description>Kaiser Account Role</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>