force-app/main/default/objects/Kaiser_Member_Info__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Member&apos;s Gender in Kaiser System</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>