force-app/main/default/objects/Kaiser_Member_Info__c/fields/Member_MRN__c.field-meta.xml
<CustomField>
    <fullName>Member_MRN__c</fullName>
    <description>Member MRNin Kaiser System</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Member MRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>