force-app/main/default/objects/Kaiser_Member_Info__c/fields/Member_SSN__c.field-meta.xml
<CustomField>
    <fullName>Member_SSN__c</fullName>
    <description>Member SSN in Kaiser System</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Member SSN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>