force-app/main/default/objects/Kaiser_Member_Info__c/fields/Subscriber_MRN__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_MRN__c</fullName>
    <description>Member Subscriber MRN in Kaiser System</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Subscriber MRN</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>